// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`RoomTile when message previews are enabled and there is a message in a thread should render as expected 1`] = `
<DocumentFragment>
  <div
    aria-describedby="mx_RoomTile_messagePreview_!1:example.org"
    aria-label="!1:​example.org"
    aria-selected="false"
    class="mx_AccessibleButton mx_RoomTile"
    role="treeitem"
    tabindex="-1"
  >
    <div
      class="mx_DecoratedRoomAvatar"
    >
      <span
        class="_avatar_zysgz_8 mx_BaseAvatar _avatar-imageless_zysgz_55"
        data-color="3"
        data-testid="avatar-img"
        data-type="round"
        role="presentation"
        style="--cpd-avatar-size: 32px;"
      >
        !
      </span>
    </div>
    <div
      class="mx_RoomTile_titleContainer"
    >
      <div
        class="mx_RoomTile_title mx_RoomTile_titleWithSubtitle"
        tabindex="-1"
        title="!1:​example.org"
      >
        <span
          dir="auto"
        >
          !1:​example.org
        </span>
      </div>
      <div
        class="mx_RoomTile_subtitle"
        id="mx_RoomTile_messagePreview_!1:example.org"
        title="test thread reply"
      >
        <span
          class="mx_RoomTile_subtitle_text"
        >
          test thread reply
        </span>
      </div>
    </div>
    <div
      aria-hidden="true"
      class="mx_RoomTile_badgeContainer"
    />
    <div
      aria-expanded="false"
      aria-haspopup="true"
      aria-label="Room options"
      class="mx_AccessibleButton mx_RoomTile_menuButton"
      role="button"
      tabindex="0"
    >
      <svg
        fill="currentColor"
        height="1em"
        viewBox="0 0 24 24"
        width="1em"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M6 14q-.824 0-1.412-.588A1.93 1.93 0 0 1 4 12q0-.825.588-1.412A1.93 1.93 0 0 1 6 10q.824 0 1.412.588Q8 11.175 8 12t-.588 1.412A1.93 1.93 0 0 1 6 14m6 0q-.825 0-1.412-.588A1.93 1.93 0 0 1 10 12q0-.825.588-1.412A1.93 1.93 0 0 1 12 10q.825 0 1.412.588Q14 11.175 14 12t-.588 1.412A1.93 1.93 0 0 1 12 14m6 0q-.824 0-1.413-.588A1.93 1.93 0 0 1 16 12q0-.825.587-1.412A1.93 1.93 0 0 1 18 10q.824 0 1.413.588Q20 11.175 20 12t-.587 1.412A1.93 1.93 0 0 1 18 14"
        />
      </svg>
    </div>
    <div
      aria-expanded="false"
      aria-haspopup="true"
      aria-label="Notification options"
      class="mx_AccessibleButton mx_RoomTile_notificationsButton"
      role="button"
      tabindex="-1"
    />
  </div>
</DocumentFragment>
`;

exports[`RoomTile when message previews are enabled and there is a message in the room should render as expected 1`] = `
<DocumentFragment>
  <div
    aria-describedby="mx_RoomTile_messagePreview_!1:example.org"
    aria-label="!1:​example.org Unread messages."
    aria-selected="false"
    class="mx_AccessibleButton mx_RoomTile"
    role="treeitem"
    tabindex="-1"
  >
    <div
      class="mx_DecoratedRoomAvatar"
    >
      <span
        class="_avatar_zysgz_8 mx_BaseAvatar _avatar-imageless_zysgz_55"
        data-color="3"
        data-testid="avatar-img"
        data-type="round"
        role="presentation"
        style="--cpd-avatar-size: 32px;"
      >
        !
      </span>
    </div>
    <div
      class="mx_RoomTile_titleContainer"
    >
      <div
        class="mx_RoomTile_title mx_RoomTile_titleWithSubtitle mx_RoomTile_titleHasUnreadEvents"
        tabindex="-1"
        title="!1:​example.org"
      >
        <span
          dir="auto"
        >
          !1:​example.org
        </span>
      </div>
      <div
        class="mx_RoomTile_subtitle"
        id="mx_RoomTile_messagePreview_!1:example.org"
        title="test message"
      >
        <span
          class="mx_RoomTile_subtitle_text"
        >
          test message
        </span>
      </div>
    </div>
    <div
      aria-hidden="true"
      class="mx_RoomTile_badgeContainer"
    >
      <div
        class="mx_NotificationBadge mx_NotificationBadge_visible mx_NotificationBadge_dot"
      >
        <span
          class="mx_NotificationBadge_count"
        />
      </div>
    </div>
    <div
      aria-expanded="false"
      aria-haspopup="true"
      aria-label="Room options"
      class="mx_AccessibleButton mx_RoomTile_menuButton"
      role="button"
      tabindex="0"
    >
      <svg
        fill="currentColor"
        height="1em"
        viewBox="0 0 24 24"
        width="1em"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M6 14q-.824 0-1.412-.588A1.93 1.93 0 0 1 4 12q0-.825.588-1.412A1.93 1.93 0 0 1 6 10q.824 0 1.412.588Q8 11.175 8 12t-.588 1.412A1.93 1.93 0 0 1 6 14m6 0q-.825 0-1.412-.588A1.93 1.93 0 0 1 10 12q0-.825.588-1.412A1.93 1.93 0 0 1 12 10q.825 0 1.412.588Q14 11.175 14 12t-.588 1.412A1.93 1.93 0 0 1 12 14m6 0q-.824 0-1.413-.588A1.93 1.93 0 0 1 16 12q0-.825.587-1.412A1.93 1.93 0 0 1 18 10q.824 0 1.413.588Q20 11.175 20 12t-.587 1.412A1.93 1.93 0 0 1 18 14"
        />
      </svg>
    </div>
    <div
      aria-expanded="false"
      aria-haspopup="true"
      aria-label="Notification options"
      class="mx_AccessibleButton mx_RoomTile_notificationsButton"
      role="button"
      tabindex="-1"
    />
  </div>
</DocumentFragment>
`;

exports[`RoomTile when message previews are enabled should render a room without a message as expected 1`] = `
<DocumentFragment>
  <div
    aria-describedby="mx_RoomTile_messagePreview_!1:example.org"
    aria-label="!1:​example.org"
    aria-selected="false"
    class="mx_AccessibleButton mx_RoomTile"
    role="treeitem"
    tabindex="-1"
  >
    <div
      class="mx_DecoratedRoomAvatar"
    >
      <span
        class="_avatar_zysgz_8 mx_BaseAvatar _avatar-imageless_zysgz_55"
        data-color="3"
        data-testid="avatar-img"
        data-type="round"
        role="presentation"
        style="--cpd-avatar-size: 32px;"
      >
        !
      </span>
    </div>
    <div
      class="mx_RoomTile_titleContainer"
    >
      <div
        class="mx_RoomTile_title"
        tabindex="-1"
        title="!1:​example.org"
      >
        <span
          dir="auto"
        >
          !1:​example.org
        </span>
      </div>
    </div>
    <div
      aria-hidden="true"
      class="mx_RoomTile_badgeContainer"
    />
    <div
      aria-expanded="false"
      aria-haspopup="true"
      aria-label="Room options"
      class="mx_AccessibleButton mx_RoomTile_menuButton"
      role="button"
      tabindex="0"
    >
      <svg
        fill="currentColor"
        height="1em"
        viewBox="0 0 24 24"
        width="1em"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M6 14q-.824 0-1.412-.588A1.93 1.93 0 0 1 4 12q0-.825.588-1.412A1.93 1.93 0 0 1 6 10q.824 0 1.412.588Q8 11.175 8 12t-.588 1.412A1.93 1.93 0 0 1 6 14m6 0q-.825 0-1.412-.588A1.93 1.93 0 0 1 10 12q0-.825.588-1.412A1.93 1.93 0 0 1 12 10q.825 0 1.412.588Q14 11.175 14 12t-.588 1.412A1.93 1.93 0 0 1 12 14m6 0q-.824 0-1.413-.588A1.93 1.93 0 0 1 16 12q0-.825.587-1.412A1.93 1.93 0 0 1 18 10q.824 0 1.413.588Q20 11.175 20 12t-.587 1.412A1.93 1.93 0 0 1 18 14"
        />
      </svg>
    </div>
    <div
      aria-expanded="false"
      aria-haspopup="true"
      aria-label="Notification options"
      class="mx_AccessibleButton mx_RoomTile_notificationsButton"
      role="button"
      tabindex="-1"
    />
  </div>
</DocumentFragment>
`;

exports[`RoomTile when message previews are not enabled should render the room 1`] = `
<div>
  <div
    aria-label="!1:​example.org"
    aria-selected="false"
    class="mx_AccessibleButton mx_RoomTile"
    role="treeitem"
    tabindex="-1"
  >
    <div
      class="mx_DecoratedRoomAvatar"
    >
      <span
        class="_avatar_zysgz_8 mx_BaseAvatar _avatar-imageless_zysgz_55"
        data-color="3"
        data-testid="avatar-img"
        data-type="round"
        role="presentation"
        style="--cpd-avatar-size: 32px;"
      >
        !
      </span>
    </div>
    <div
      class="mx_RoomTile_titleContainer"
    >
      <div
        class="mx_RoomTile_title"
        tabindex="-1"
        title="!1:​example.org"
      >
        <span
          dir="auto"
        >
          !1:​example.org
        </span>
      </div>
    </div>
    <div
      aria-hidden="true"
      class="mx_RoomTile_badgeContainer"
    />
    <div
      aria-expanded="false"
      aria-haspopup="true"
      aria-label="Room options"
      class="mx_AccessibleButton mx_RoomTile_menuButton"
      role="button"
      tabindex="0"
    >
      <svg
        fill="currentColor"
        height="1em"
        viewBox="0 0 24 24"
        width="1em"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M6 14q-.824 0-1.412-.588A1.93 1.93 0 0 1 4 12q0-.825.588-1.412A1.93 1.93 0 0 1 6 10q.824 0 1.412.588Q8 11.175 8 12t-.588 1.412A1.93 1.93 0 0 1 6 14m6 0q-.825 0-1.412-.588A1.93 1.93 0 0 1 10 12q0-.825.588-1.412A1.93 1.93 0 0 1 12 10q.825 0 1.412.588Q14 11.175 14 12t-.588 1.412A1.93 1.93 0 0 1 12 14m6 0q-.824 0-1.413-.588A1.93 1.93 0 0 1 16 12q0-.825.587-1.412A1.93 1.93 0 0 1 18 10q.824 0 1.413.588Q20 11.175 20 12t-.587 1.412A1.93 1.93 0 0 1 18 14"
        />
      </svg>
    </div>
    <div
      aria-expanded="false"
      aria-haspopup="true"
      aria-label="Notification options"
      class="mx_AccessibleButton mx_RoomTile_notificationsButton"
      role="button"
      tabindex="-1"
    />
  </div>
</div>
`;
